--- a/pom.xml
+++ b/pom.xml
@@ -172,7 +172,31 @@
     <version>2.1.0</version>
 </dependency>
 
-		
+<!-- https://mvnrepository.com/artifact/com.github.detro.ghostdriver/phantomjsdriver -->
+<dependency>
+    <groupId>com.github.detro.ghostdriver</groupId>
+    <artifactId>phantomjsdriver</artifactId>
+    <version>1.1.0</version>
+</dependency>
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-chrome-driver</artifactId>
+</dependency>
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-server</artifactId>
+</dependency>
+<dependency>
+    <groupId>org.seleniumhq.selenium</groupId>
+    <artifactId>selenium-java</artifactId>
+</dependency>
+<!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
+<dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>3.3.0</version>
+</dependency>
+	
     </dependencies>
     
     <profiles>
@@ -197,7 +221,8 @@
                 <configuration>
                     <!-- Java EE doesn't require web.xml, Maven needs to
                         catch up! -->
-                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <!-- <failOnMissingWebXml>false</failOnMissingWebXml> -->
+                    <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
                 </configuration>
             </plugin>
             <!-- The WildFly plug-in deploys your WAR to a local WildFly container -->
